fix standard